@@ -1,17 +1,26 @@
 package org.opendatadiscovery.oddplatform.repository;
 
+import java.util.ArrayList;
 import java.util.Collection;
+import java.util.List;
 import java.util.Map;
 import java.util.Optional;
 import java.util.Set;
 import java.util.stream.Collectors;
 import lombok.RequiredArgsConstructor;
+import org.jooq.Condition;
 import org.jooq.DSLContext;
+import org.jooq.Record;
 import org.jooq.Record2;
+import org.jooq.Select;
+import org.jooq.SortOrder;
+import org.opendatadiscovery.oddplatform.api.contract.model.DataQualityTestRunStatus;
 import org.opendatadiscovery.oddplatform.dto.DataEntityDetailsDto;
 import org.opendatadiscovery.oddplatform.dto.DatasetTestReportDto;
 import org.opendatadiscovery.oddplatform.model.tables.pojos.DataEntityTaskRunPojo;
 import org.opendatadiscovery.oddplatform.model.tables.pojos.DataQualityTestRelationsPojo;
+import org.opendatadiscovery.oddplatform.repository.util.JooqQueryHelper;
+import org.opendatadiscovery.oddplatform.utils.Page;
 import org.springframework.stereotype.Repository;
 
 import static java.util.Collections.emptyList;
@@ -25,6 +34,7 @@ import static org.opendatadiscovery.oddplatform.model.Tables.DATA_QUALITY_TEST_R
 public class DataQualityRepositoryImpl implements DataQualityRepository {
     private final DSLContext dslContext;
     private final DataEntityRepository dataEntityRepository;
+    private final JooqQueryHelper jooqQueryHelper;
 
     @Override
     public Collection<DataEntityDetailsDto> getDataQualityTests(final long datasetId) {
@@ -42,13 +52,30 @@ public class DataQualityRepositoryImpl implements DataQualityRepository {
     }
 
     @Override
-    public Collection<DataEntityTaskRunPojo> getDataQualityTestRuns(final long dataQualityTestId) {
-        return dslContext.select(DATA_ENTITY_TASK_RUN.fields())
+    public Page<DataEntityTaskRunPojo> getDataQualityTestRuns(final long dataQualityTestId,
+                                                              final DataQualityTestRunStatus status,
+                                                              final Integer page,
+                                                              final Integer size) {
+        final List<Condition> conditions = new ArrayList<>();
+        conditions.add(DATA_ENTITY.ID.eq(dataQualityTestId));
+        if (status != null) {
+            conditions.add(DATA_ENTITY_TASK_RUN.STATUS.eq(status.name()));
+        }
+
+        final var baseQuery = dslContext.select(DATA_ENTITY_TASK_RUN.fields())
             .from(DATA_ENTITY_TASK_RUN)
             .join(DATA_ENTITY).on(DATA_ENTITY.ODDRN.eq(DATA_ENTITY_TASK_RUN.DATA_ENTITY_ODDRN))
-            .where(DATA_ENTITY.ID.eq(dataQualityTestId))
-            .fetchStreamInto(DataEntityTaskRunPojo.class)
-            .collect(Collectors.toList());
+            .where(conditions);
+
+        final Select<? extends Record> select = jooqQueryHelper.paginate(baseQuery, DATA_ENTITY_TASK_RUN.START_TIME,
+            SortOrder.DESC, (page - 1) * size, size);
+
+        final List<? extends Record> records = select
+            .fetchStream()
+            .toList();
+
+        return jooqQueryHelper.pageifyResult(records, r -> r.into(DataEntityTaskRunPojo.class),
+            () -> fetchCount(baseQuery));
     }
 
     @Override
@@ -81,5 +108,12 @@ public class DataQualityRepositoryImpl implements DataQualityRepository {
             .unknownTotal(report.getOrDefault("UNKNOWN", 0L))
             .total(report.values().stream().mapToLong(a -> a).sum())
             .build());
+    }
+
+    private Long fetchCount(final Select<?> select) {
+        return dslContext.selectCount()
+            .from(select)
+            .fetchOptionalInto(Long.class)
+            .orElse(0L);
     }
 }
